Add login and fix problem with boot.sh
